[tool.poetry]

name = "generate-pyrogram-session-string"

version = "0.1.0"

description = "Ambil String Session mu disini setelah itu String Session akan dikirim ke Saved Messages atau Pesan Tersimpan pada akun Telegram mu"

authors = ["Repi <reginalhotmailxyz@gmail.com>"]

[tool.poetry.dependencies]

python = "^3.8"

Pyrogram = "^1.2.5"

TgCrypto = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]

requires = ["poetry>=0.12"]

build-backend = "poetry.masonry.api"

