[tool.poetry]
name = "ambilstringsession"
version = "0.1.0"
description = "You can generate Telethon & Pyrogram String Session"
authors = ["collinfowel <Telegram @xxstanme>"]

[tool.poetry.dependencies]
python = "^3.8"
telethon = "^1.22.0"
pyrogram = "^1.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
